--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,28 @@
 div img {
     width: 20%;
 }
+
+body {
+    margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+@media screen and (min-width: 641px){
+    body {
+        width: 640px;
+    }
+    label, input, button {
+        margin: 0 10px;
+    }
+}
+@media screen and (max-width: 640px){
+    body {
+        width: 80vw;
+    }
+    label, input, button {
+        display: block;
+        margin: 0 auto;
+    }
+}
+
